--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:unit": "jest test --detectOpenHandles --forceExit --testPathPattern='src/tests/unit'"
   },
   "repository": {
     "type": "git",
@@ -26,14 +27,21 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
+    "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.14.1",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
+    "superagent": "^8.0.9",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/supertest": "^2.0.12",
     "archiver": "^5.3.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -42,6 +50,7 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.11.5",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0"
   }
