--- a/tsconfig.json
+++ b/tsconfig.json
@@ -81,7 +81,7 @@
     /* Ensure that casing is correct in imports. */
 
     /* Type Checking */
-    "strict": true,
+    "strict": true
     /* Enable all strict type-checking options. */
     // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
@@ -104,10 +104,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
+    //    "skipLibCheck": true,
     /* Skip type checking all .d.ts files. */
-  },
-  "include": [
-    "src",
-  ]
+  }
+  //  "include": [
+  //    "src"
+  //  ],
 }
