--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/compression": "^1.7.2",
     "@types/supertest": "^2.0.12",
     "archiver": "^5.3.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
